# rust-os

./: Cargo.toml  README.md  run.sh  rust-toolchain.toml  setup.sh  x86_64-custom.json
.cargo/: config.toml
scripts/: run.sh  setup.sh
src/: allocator.rs  gdt.rs  keyboard.rs  main.rs  vga_buffer.rs
src/fs/: memfs.rs  mod.rs
src/interrupts/: mod.rs  pic.rs
src/memory/: heap.rs  mod.rs
src/network/: arp.rs  dhcp.rs  dns.rs  driver.rs  ethernet.rs  icmp.rs  ip.rs  mod.rs  prelude.rs  socket.rs  tcp.rs  test.rs  udp.rs  utils.rs
src/process/: mod.rs  syscall.rs
src/shell/: mod.rs
src/task/: context.rs  mod.rs  sync.rs
