[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.11.9"
volatile = "0.6.1"
spin = "0.9.8"
x86_64 = "0.15.2"
uart_16550 = "0.3.2"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300          # (in seconds)

[features]
default = []    
